Tested the fixed nav but overlaps the main section
Continue the work due to issue with covering the main section. The fixed header works but the UI is not good.

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     font-family: 'Nanum Gothic', sans-serif;
 }
 
-/* Scroll to top */
+/* Scroll to top
 
 .scroll-top {
     position: relative;
@@ -25,7 +25,7 @@ body {
     padding: 10px;
     position: fixed;
     
-}
+} */
 
 /* Header styles */
 
@@ -33,8 +33,12 @@ body {
     background-image: url('./forestPic.jpg');
     background-position: center center;
     background-size: cover;
+    position: fixed;
+    top: 0px;
+    width: 100%;
     text-align: center;
     padding: 15px;
+    
 }
 
 #header .header .icons {
